# CityGen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml  desktop.ini  main.cpp
include/: GenericTypes.h  Gradient.h  GridlineTensorField.h  IEigenField.h  IScalarField.h  ITensorField.h  IVector2Field.h  RadialTensorField.h  ResampleAndRescale.h  ScaledScalarField.h  Tensor.h  UI.h  graphVisualization.h  program.h
include/Fields/: Gradient.h  GridlineTensorField.h  IEigenField.h  IScalarField.h  ITensorField.h  IVector2Field.h  RadialTensorField.h  ResampleAndRescale.h  ScaledScalarField.h  Tensor.h
include/Hyperstreamline/: GenericTypes.h  GeometricTree.h
include/Hyperstreamline/Fields/: IVectorField.h  ResampleAndRescale.h
include/Hyperstreamline/Tracing/: Graph.h  RegionBuilder.h  Streamline.h
include/Tracing/: Graph.h  Region.h  RegionBuilder.h  Streamline.h
src/: GenericTypes.cpp  UI.cpp  graphVisualization.cpp
src/Fields/: Tensor.cpp
src/Hyperstreamline/: CMakeLists.txt
src/Hyperstreamline/Tracing/: Graph.cpp  Region.cpp  RegionBuilder.cpp  Streamline.cpp
src/Tracing/: Graph.cpp  Region.cpp  RegionBuilder.cpp  Streamline.cpp
test/: CMakeLists.txt  GenericTypesTests.cpp
test/Fields/: RegionTests.cpp
